--- a/transifex.yml
+++ b/transifex.yml
@@ -5,3 +5,6 @@ filters:
   source_language: fr_FR
   source_file_dir: langs
   translation_files_expression: 'langs/<lang>.json'
+settings:
+  pr_branch_name: transifex_<br_unique_id>
+git:
