--- a/transifex.yml
+++ b/transifex.yml
@@ -9,7 +9,7 @@ git:
   - filter_type: file
     source_file: langs/fr_FR.json
     file_format: KEYVALUEJSON
-    source_language: en
-    translation_files_expression: langs/<lang>
+    source_language: fr_FR
+    translation_files_expression: 'langs/<lang>.json'
   settings:
     pr_branch_name: transifex_<br_unique_id>
