--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -23,3 +23,6 @@ jobs:
         run: yarn
       - name: Generate lib ⚙️
         run: yarn sync
+      - uses: EndBug/add-and-commit@v8
+        with:
+          default_author: github_actions
